// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnumDefinitions.sol - {"bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
contract EnumDefinitions {
    enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    enum States { State1, State2, State3, State4, State5, State6, State7, State8, State9 }
    enum Rounding {
    Floor, // Toward negative infinity
    Ceil, // Toward positive infinity
    Trunc, // Toward zero
    Expand // Away from zero
    }

}

=====================================output=====================================
contract EnumDefinitions {
    enum ActionChoices {
        GoLeft,
        GoRight,
        GoStraight,
        SitStill
    }
    enum States {
        State1,
        State2,
        State3,
        State4,
        State5,
        State6,
        State7,
        State8,
        State9
    }
    enum Rounding {
        Floor, // Toward negative infinity
        Ceil, // Toward positive infinity
        Trunc, // Toward zero
        Expand // Away from zero
    }
}

================================================================================
`;

exports[`EnumDefinitions.sol format 1`] = `
====================================options=====================================
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
contract EnumDefinitions {
    enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    enum States { State1, State2, State3, State4, State5, State6, State7, State8, State9 }
    enum Rounding {
    Floor, // Toward negative infinity
    Ceil, // Toward positive infinity
    Trunc, // Toward zero
    Expand // Away from zero
    }

}

=====================================output=====================================
contract EnumDefinitions {
    enum ActionChoices {
        GoLeft,
        GoRight,
        GoStraight,
        SitStill
    }
    enum States {
        State1,
        State2,
        State3,
        State4,
        State5,
        State6,
        State7,
        State8,
        State9
    }
    enum Rounding {
        Floor, // Toward negative infinity
        Ceil, // Toward positive infinity
        Trunc, // Toward zero
        Expand // Away from zero
    }
}

================================================================================
`;
